--- a/src/jedi_bundle/config/platforms/nccs_discover.yaml
+++ b/src/jedi_bundle/config/platforms/nccs_discover.yaml
@@ -13,14 +13,14 @@ modules:
       - source /usr/share/lmod/lmod/init/bash
     load:
       - module purge
-      - module use /discover/swdev/jcsda/spack-stack/modulefiles
+      - module use /discover/swdev/gmao_SIteam/modulefiles-SLES12
+      - module use /discover/swdev/jcsda/spack-stack/scu16/modulefiles
       - module load miniconda/3.9.7
       - module load ecflow/5.8.4
-      - module load mysql/8.0.31
-      - module use /gpfsm/dswdev/jcsda/spack-stack/spack-stack-dev-20231114/envs/unified-env/install/modulefiles/Core
-      - module load stack-intel/2022.0.1
+      - module use /gpfsm/dswdev/jcsda/spack-stack/scu16/spack-stack-1.7.0/envs/ue-intel-2021.5.0/install/modulefiles/Core
+      - module load stack-intel/2021.5.0
       - module load stack-intel-oneapi-mpi/2021.5.0
-      - module load stack-python/3.10.8
+      - module load stack-python/3.10.13
       - module load jedi-fv3-env
       - module load soca-env
       - module load gmao-swell-env/1.0.0
@@ -31,14 +31,14 @@ modules:
       - source /usr/share/lmod/lmod/init/bash
     load:
       - module purge
-      - module use /discover/swdev/jcsda/spack-stack/modulefiles
+      - module use /discover/swdev/gmao_SIteam/modulefiles-SLES12
+      - module use /discover/swdev/jcsda/spack-stack/scu16/modulefiles
       - module load miniconda/3.9.7
       - module load ecflow/5.8.4
-      - module load mysql/8.0.31
-      - module use /gpfsm/dswdev/jcsda/spack-stack/spack-stack-dev-20231114/envs/unified-env/install/modulefiles/Core
-      - module load stack-gcc/10.1.0
+      - module use /gpfsm/dswdev/jcsda/spack-stack/scu16/spack-stack-1.7.0/envs/ue-gcc-12.1.0/install/modulefiles/Core
+      - module load stack-gcc/12.1.0
       - module load stack-openmpi/4.1.3
-      - module load stack-python/3.10.8
+      - module load stack-python/3.10.13
       - module load jedi-fv3-env
       - module load soca-env
       - module load gmao-swell-env/1.0.0
