--- a/src/jedi_bundle/config/platforms/nccs_discover_sles15.yaml
+++ b/src/jedi_bundle/config/platforms/nccs_discover_sles15.yaml
@@ -16,7 +16,7 @@ modules:
       - module use /discover/swdev/gmao_SIteam/modulefiles-SLES15
       - module use /discover/swdev/jcsda/spack-stack/scu17/modulefiles
       - module load ecflow/5.11.4
-      - module use /gpfsm/dswdev/jcsda/spack-stack/scu17/spack-stack-20240228/envs/unified-env-intel-2021.10.0/install/modulefiles/Core
+      - module use /gpfsm/dswdev/jcsda/spack-stack/scu17/spack-stack-1.7.0/envs/ue-intel-2021.10.0/install/modulefiles/Core
       - module load stack-intel/2021.10.0
       - module load stack-intel-oneapi-mpi/2021.10.0
       - module load stack-python/3.10.13
@@ -33,7 +33,7 @@ modules:
       - module use /discover/swdev/gmao_SIteam/modulefiles-SLES15
       - module use /discover/swdev/jcsda/spack-stack/scu17/modulefiles
       - module load ecflow/5.11.4
-      - module use /gpfsm/dswdev/jcsda/spack-stack/scu17/spack-stack-20240228/envs/unified-env-gcc-12.3.0/install/modulefiles/Core
+      - module use /gpfsm/dswdev/jcsda/spack-stack/scu17/spack-stack-1.7.0/envs/ue-gcc-12.3.0/install/modulefiles/Core
       - module load stack-gcc/12.3.0
       - module load stack-openmpi/4.1.6
       - module load stack-python/3.10.13
