--- a/src/jedi_bundle/config/platforms/nccs_discover_sles15.yaml
+++ b/src/jedi_bundle/config/platforms/nccs_discover_sles15.yaml
@@ -25,6 +25,24 @@ modules:
       - module load gmao-swell-env/1.0.0
       - module unload gsibec crtm
     configure: -DMPIEXEC_EXECUTABLE="/usr/local/intel/oneapi/2021/mpi/2021.10.0/bin/mpirun" -DMPIEXEC_NUMPROC_FLAG="-np"
+  intel-geos:
+    init:
+      - source /usr/share/lmod/lmod/init/bash
+    load:
+      - module purge
+      - module use /discover/swdev/gmao_SIteam/modulefiles-SLES15
+      - module use /discover/swdev/jcsda/spack-stack/scu17/modulefiles
+      - module load ecflow/5.11.4
+      - module use /gpfsm/dswdev/jcsda/spack-stack/scu17/spack-stack-1.7.0/envs/ue-intel-2021.10.0/install/modulefiles/Core
+      - module load stack-intel/2021.10.0
+      - module load stack-intel-oneapi-mpi/2021.10.0
+      - module load stack-python/3.10.13
+      - module load jedi-fv3-env
+      - module load soca-env
+      - module load gmao-swell-env/1.0.0
+      - module unload gsibec crtm
+      - module load esmf python py-pyyaml py-numpy pflogger fargparse zlib-ng cmake
+    configure: -DMPIEXEC_EXECUTABLE="/usr/local/intel/oneapi/2021/mpi/2021.10.0/bin/mpirun" -DMPIEXEC_NUMPROC_FLAG="-np"
   gnu:
     init:
       - source /usr/share/lmod/lmod/init/bash
@@ -41,4 +59,22 @@ modules:
       - module load soca-env
       - module load gmao-swell-env/1.0.0
       - module unload gsibec crtm
+    configure: -DMPIEXEC_EXECUTABLE="/usr/bin/srun" -DMPIEXEC_NUMPROC_FLAG="-n"
+  gnu-geos:
+    init:
+      - source /usr/share/lmod/lmod/init/bash
+    load:
+      - module purge
+      - module use /discover/swdev/gmao_SIteam/modulefiles-SLES15
+      - module use /discover/swdev/jcsda/spack-stack/scu17/modulefiles
+      - module load ecflow/5.11.4
+      - module use /gpfsm/dswdev/jcsda/spack-stack/scu17/spack-stack-1.7.0/envs/ue-gcc-12.3.0/install/modulefiles/Core
+      - module load stack-gcc/12.3.0
+      - module load stack-openmpi/4.1.6
+      - module load stack-python/3.10.13
+      - module load jedi-fv3-env
+      - module load soca-env
+      - module load gmao-swell-env/1.0.0
+      - module unload gsibec crtm
+      - module load esmf python py-pyyaml py-numpy pflogger fargparse zlib-ng cmake
     configure: -DMPIEXEC_EXECUTABLE="/usr/bin/srun" -DMPIEXEC_NUMPROC_FLAG="-n"
