--- a/.github/workflows/clone_with_pinned_version.yml
+++ b/.github/workflows/clone_with_pinned_version.yml
@@ -1,4 +1,4 @@
-name: JEDI Bundle Pinned Version Clone Test
+name: JEDI Bundle Pinned Version Test
 
 on:
   pull_request:
@@ -7,43 +7,49 @@ on:
 
 jobs:
   buildbundle:
-    name: Clone oops bundle
+    name: Run jedi_bundle with pinned_versions
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.12"]
 
     steps:
 
     # Setup Python
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.9
+        python-version: ${{ matrix.python-version }}
 
     # Update conda
-    - name: Update conda
-      run: conda update -n base -c defaults conda
+    #- name: Update conda
+    #  run: conda update -n base -c defaults conda
 
     # Install pip
-    - name: Install pip
-      run: conda install pip
+    #- name: Install pip
+    #  run: conda install pip
 
     # Clone the code repo
     - name: Clone code repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         lfs: true
 
     # Install package
-    - name: Upgrade pip
-      run: $CONDA/bin/pip3 install --upgrade pip
+    #- name: Upgrade pip
+    #  run: $CONDA/bin/pip3 install --upgrade pip
+    #- name: Install JEDI bundle and dependencies
+    #  run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r requirements.txt --user .
+
     - name: Install JEDI bundle and dependencies
-      run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r requirements.txt --user .
+      run: python -m pip install --use-deprecated=legacy-resolver -r requirements.txt --user .
     - name: Put executables in the path
       run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
     # Run an application test
     - name: Run JEDI Bundle application test
-      run: jedi_bundle --pinned_versions src/jedi_bundle/config/test_pinned_versions.yaml Clone src/jedi_bundle/config/build.yaml
+      run: jedi_bundle -pv
 
     # Confirm existence of expected file
     - name: Check
-      run: ls -l jedi_bundle/oops/CMakeLists.txt
+      run: ls -l build.yaml
