--- a/.github/workflows/build_with_pinned_versions.yml
+++ b/.github/workflows/build_with_pinned_versions.yml
@@ -21,25 +21,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    # Update conda
-    #- name: Update conda
-    #  run: conda update -n base -c defaults conda
-
-    # Install pip
-    #- name: Install pip
-    #  run: conda install pip
-
     # Clone the code repo
     - name: Clone code repo
       uses: actions/checkout@v4
       with:
         lfs: true
-
-    # Install package
-    #- name: Upgrade pip
-    #  run: $CONDA/bin/pip3 install --upgrade pip
-    #- name: Install JEDI bundle and dependencies
-    #  run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r requirements.txt --user .
 
     - name: Install JEDI bundle and dependencies
       run: python -m pip install --use-deprecated=legacy-resolver -r requirements.txt --user .
@@ -50,6 +36,6 @@ jobs:
     - name: Run JEDI Bundle application test
       run: jedi_bundle --pinned_versions
 
-    # Confirm existence of expected file
-    - name: Check
-      run: ls -l build.yaml
+    # Check if build.yaml has pinned_versions
+    - name: Check for pinned_versions
+      run: python jedi_bundle/src/jedi_bundle/tests/check_build_yaml.py ${GITHUB_WORKSPACE}/build.yaml
