--- a/.github/workflows/clone_a_jedi_bundle.yml
+++ b/.github/workflows/clone_a_jedi_bundle.yml
@@ -14,29 +14,19 @@ jobs:
 
     # Setup Python
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: 3.9
 
-    # Update conda
-    - name: Update conda
-      run: conda update -n base -c defaults conda
-
-    # Install pip
-    - name: Install pip
-      run: conda install pip
-
     # Clone the code repo
     - name: Clone code repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         lfs: true
 
     # Install package
-    - name: Upgrade pip
-      run: $CONDA/bin/pip3 install --upgrade pip
     - name: Install JEDI bundle and dependencies
-      run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r requirements.txt --user .
+      run: python -m pip install --use-deprecated=legacy-resolver -r requirements.txt --user .
     - name: Put executables in the path
       run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
