config updates for fms change and including DA-utils as an option

--- a/src/jedi_bundle/config/platforms/nccs_discover.yaml
+++ b/src/jedi_bundle/config/platforms/nccs_discover.yaml
@@ -24,7 +24,8 @@ modules:
       - module load jedi-fv3-env
       - module load soca-env
       - module load gmao-swell-env/1.0.0
-      - module unload gsibec crtm
+      - module unload gsibec crtm fms
+      - module load fms/2023.04
     configure: -DMPIEXEC_EXECUTABLE="/usr/local/intel/oneapi/2021/mpi/2021.6.0/bin/mpirun" -DMPIEXEC_NUMPROC_FLAG="-np"
   intel-geos:
     init:
@@ -42,7 +43,8 @@ modules:
       - module load jedi-fv3-env
       - module load soca-env
       - module load gmao-swell-env/1.0.0
-      - module unload gsibec crtm
+      - module unload gsibec crtm fms
+      - module load fms/2023.04
       - module load esmf python py-pyyaml py-numpy pflogger fargparse zlib-ng cmake
     configure: -DMPIEXEC_EXECUTABLE="/usr/local/intel/oneapi/2021/mpi/2021.6.0/bin/mpirun" -DMPIEXEC_NUMPROC_FLAG="-np"
   gnu:
@@ -61,7 +63,8 @@ modules:
       - module load jedi-fv3-env
       - module load soca-env
       - module load gmao-swell-env/1.0.0
-      - module unload gsibec crtm
+      - module unload gsibec crtm fms
+      - module load fms/2023.04
     configure: -DMPIEXEC_EXECUTABLE="/usr/bin/srun" -DMPIEXEC_NUMPROC_FLAG="-n"
   gnu-geos:
     init:
@@ -79,6 +82,7 @@ modules:
       - module load jedi-fv3-env
       - module load soca-env
       - module load gmao-swell-env/1.0.0
-      - module unload gsibec crtm
+      - module unload gsibec crtm fms
+      - module load fms/2023.04
       - module load esmf python py-pyyaml py-numpy pflogger fargparse zlib-ng cmake
     configure: -DMPIEXEC_EXECUTABLE="/usr/bin/srun" -DMPIEXEC_NUMPROC_FLAG="-n"
