--- a/src/jedi_bundle/config/bundles/build-order.yaml
+++ b/src/jedi_bundle/config/bundles/build-order.yaml
@@ -49,18 +49,10 @@
 - vader:
     default_branch: develop
 
-# Soca and fv3
-- fms:
-    repo_url_name: FMS
-    default_branch: release-stable
-
 # Soca
 - icepack:
     repo_url_name: Icepack
     default_branch: feature/ecbuild-new
-- mom6:
-    repo_url_name: MOM6
-    default_branch: main-ecbuild
 - soca:
     default_branch: develop
 
@@ -76,4 +68,11 @@
 - fv3-jedi-data:
     default_branch: develop
 - fv3-jedi:
+    default_branch: develop
+- jedi-bundle:
+    default_branch: develop
+
+# Other external packages
+- da-utils:
+    repo_url_name: DA-utils
     default_branch: develop
